--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.3"
   }
